--- a/app/src/main/res/layout/danar_fragment.xml
+++ b/app/src/main/res/layout/danar_fragment.xml
@@ -608,37 +608,43 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-	 	 <Button
+                <Button
                     android:id="@+id/danar_viewprofile"
                     style="@style/ButtonSmallFontStyle"
                     android:layout_width="match_parent"
-		     android:layout_height="wrap_content"
-		     android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:drawableTop="@drawable/icon_danarprofile"
                     android:paddingLeft="0dp"
                     android:paddingRight="0dp"
-                    android:text="@string/danar_viewprofile"/>
+                    android:paddingTop="5dp"
+                    android:paddingBottom="10dp"
+                    android:text="@string/danar_viewprofile" />
                 
 
                 <Button
                     android:id="@+id/danar_history"
                     style="@style/ButtonSmallFontStyle"
                     android:layout_width="match_parent"
-		    android:layout_height="wrap_content"
-		    android:layout_weight="1"
-		    android:drawableTop="@drawable/icon_danarhistory"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:drawableTop="@drawable/icon_danarhistory"
                     android:paddingLeft="0dp"
                     android:paddingRight="0dp"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="10dp"
                     android:text="@string/danar_history" />
 		<Button
                     android:id="@+id/danar_stats"
                     style="@style/ButtonSmallFontStyle"
                     android:layout_width="match_parent"
-		    android:layout_height="wrap_content"
-		    android:layout_weight="1"
-		    android:drawableTop="@drawable/icon_danarstats"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:drawableTop="@drawable/icon_danarstats"
                     android:paddingLeft="0dp"
                     android:paddingRight="0dp"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="10dp"
                     android:text="@string/danar_stats" />
             </LinearLayout>
         </LinearLayout>
