--- a/app/src/main/res/layout/careportal_fragment.xml
+++ b/app/src/main/res/layout/careportal_fragment.xml
@@ -59,6 +59,8 @@
                         android:drawableTop="@drawable/icon_cp_bgcheck"
                         android:paddingLeft="0dp"
                         android:paddingRight="0dp"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="10dp"
                         android:text="@string/careportal_bgcheck"
 
                         app:layout_column="0"
@@ -74,6 +76,8 @@
                         android:drawableTop="@drawable/icon_cp_exercise"
                         android:paddingLeft="0dp"
                         android:paddingRight="0dp"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="15dp"
                         android:text="@string/careportal_exercise"
                         app:layout_column="1"
                         app:layout_columnWeight="1"
@@ -88,6 +92,8 @@
                         android:drawableTop="@drawable/icon_cp_cgm_target"
                         android:paddingLeft="0dp"
                         android:paddingRight="0dp"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="15dp"
                         android:text="@string/careportal_temporarytarget"
                         app:layout_column="2"
                         app:layout_columnWeight="1"
@@ -119,6 +125,8 @@
                         android:drawableTop="@drawable/icon_cp_bolus_snack"
                         android:paddingLeft="0dp"
                         android:paddingRight="0dp"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="15dp"
                         android:text="@string/careportal_snackbolus"
                         app:layout_column="0"
                         app:layout_columnWeight="1"
@@ -130,9 +138,11 @@
                         style="@style/ButtonSmallFontStyle"
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
-                        android:drawableTop="@drawable/icon_cp_bolus_meal"
+                        android:drawableTop="@drawable/icon_cp_bolus_meal" 
                         android:paddingLeft="0dp"
                         android:paddingRight="0dp"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="15dp"
                         android:text="@string/careportal_mealbolus"
                         app:layout_column="1"
                         app:layout_columnWeight="1"
@@ -147,6 +157,8 @@
                         android:drawableTop="@drawable/icon_cp_bolus_correction"
                         android:paddingLeft="0dp"
                         android:paddingRight="0dp"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="15dp"
                         android:text="@string/careportal_correctionbolus"
                         app:layout_column="2"
                         app:layout_columnWeight="1"
@@ -161,6 +173,8 @@
                         android:drawableTop="@drawable/icon_cp_bolus_carbs"
                         android:paddingLeft="0dp"
                         android:paddingRight="0dp"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="15dp"
                         android:text="@string/careportal_carbscorrection"
                         app:layout_column="0"
                         app:layout_columnWeight="1"
@@ -175,6 +189,8 @@
                         android:drawableTop="@drawable/icon_cp_bolus_correction"
                         android:paddingLeft="0dp"
                         android:paddingRight="0dp"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="15dp"
                         android:text="@string/careportal_combobolus"
                         app:layout_column="1"
                         app:layout_columnWeight="1"
@@ -189,6 +205,8 @@
                         android:drawableTop="@drawable/icon_cp_basal_start"
                         android:paddingLeft="0dp"
                         android:paddingRight="0dp"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="15dp"
                         android:text="@string/careportal_tempbasalstart"
                         app:layout_column="2"
                         app:layout_columnWeight="1"
@@ -203,6 +221,8 @@
                         android:drawableTop="@drawable/icon_cp_basal_end"
                         android:paddingLeft="0dp"
                         android:paddingRight="0dp"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="15dp"
                         android:text="@string/careportal_tempbasalend"
                         app:layout_column="0"
                         app:layout_columnWeight="1"
@@ -233,6 +253,8 @@
                         android:drawableTop="@drawable/icon_cp_cgm_start"
                         android:paddingLeft="0dp"
                         android:paddingRight="0dp"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="15dp"
                         android:text="@string/careportal_cgmsensorstart"
                         app:layout_column="0"
                         app:layout_columnWeight="1"
@@ -248,6 +270,8 @@
                         android:drawableTop="@drawable/icon_cp_cgm_insert"
                         android:paddingLeft="0dp"
                         android:paddingRight="0dp"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="15dp"
                         android:text="@string/careportal_cgmsensorinsert"
                         app:layout_column="1"
                         app:layout_columnWeight="1"
@@ -263,6 +287,8 @@
                         android:drawableTop="@drawable/icon_cp_aaps_offline"
                         android:paddingLeft="0dp"
                         android:paddingRight="0dp"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="15dp"
                         android:text="@string/careportal_openapsoffline"
                         app:layout_column="2"
                         app:layout_columnWeight="1"
@@ -278,6 +304,8 @@
                         android:drawableTop="@drawable/icon_cp_announcement"
                         android:paddingLeft="0dp"
                         android:paddingRight="0dp"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="15dp"
                         android:text="@string/careportal_announcement"
                         app:layout_column="0"
                         app:layout_columnWeight="1"
@@ -292,6 +320,8 @@
                         android:drawableTop="@drawable/icon_cp_question"
                         android:paddingLeft="0dp"
                         android:paddingRight="0dp"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="15dp"
                         android:text="@string/careportal_question"
                         app:layout_column="1"
                         app:layout_columnWeight="1"
@@ -306,6 +336,8 @@
                         android:drawableTop="@drawable/icon_cp_note"
                         android:paddingLeft="0dp"
                         android:paddingRight="0dp"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="15dp"
                         android:text="@string/careportal_note"
                         app:layout_column="2"
                         app:layout_columnWeight="1"
@@ -336,6 +368,8 @@
                         android:drawableTop="@drawable/icon_cp_pump_canula"
                         android:paddingLeft="0dp"
                         android:paddingRight="0dp"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="15dp"
                         android:text="@string/careportal_pumpsitechange"
                         app:layout_column="0"
                         app:layout_columnWeight="1"
@@ -350,6 +384,8 @@
                         android:drawableTop="@drawable/icon_cp_pump_cartridge"
                         android:paddingLeft="0dp"
                         android:paddingRight="0dp"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="15dp"
                         android:text="@string/careportal_insulincartridgechange"
                         app:layout_column="1"
                         app:layout_columnWeight="1"
@@ -364,6 +400,8 @@
                         android:drawableTop="@drawable/icon_cp_cgm_profile"
                         android:paddingLeft="0dp"
                         android:paddingRight="0dp"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="15dp"
                         android:text="@string/careportal_profileswitch"
                         app:layout_column="2"
                         app:layout_columnWeight="1"
@@ -379,6 +417,8 @@
                         android:drawableTop="@drawable/icon_cp_pump_battery"
                         android:paddingLeft="0dp"
                         android:paddingRight="0dp"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="15dp"
                         android:text="@string/careportal_pumpbatterychange"
                         app:layout_column="0"
                         app:layout_columnWeight="1"
